--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "start:dev": "nodemon fileName.js"
   },
@@ -26,6 +26,8 @@
     "postman-request": "^2.88.1-postman.30"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.4.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
